# gemini-live-api

./: .gitignore  Cargo.toml  README.md
examples/: audio_streaming.rs  continuous_audio_chat.rs  continuous_audio_with_tools.rs  function_calling.rs
gemini-live-macros/: Cargo.toml
gemini-live-macros/src/: lib.rs
src/: error.rs  lib.rs  types.rs
src/client/: builder.rs  connection.rs  handle.rs  handlers.rs  mod.rs
