[package]
name = "gemini-live-macros"
version = "0.1.0"
edition = "2024"
authors = ["Esteban Forero"]
description = "macros for the gemini live crate"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0.101", features = ["extra-traits", "full", "visit"] }
